avoid screen flickering around the terminal buffer

--- a/packages-custom/ayapi-term/styles/ayapi-term.less
+++ b/packages-custom/ayapi-term/styles/ayapi-term.less
@@ -6,6 +6,8 @@
 
 .ayapi-term {
   @import "xterm";
+  overflow: hidden;
+  height: 100%;
   span {
     display: inline-block;
   }
